[project]
name = "workbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Cython>=3.0.11",
  "numpy>=2.2.1",
  "setuptools>=75.8.0",
  "loguru>=0.7.3",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "ipython>=8.31.0"]
lint = ["ruff>=0.8.6", "mypy>=1.14.1"]
